--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
     "name": "default-webapp-elm-now",
-    "version": "0.2.2",
+    "version": "0.2.3",
     "license": "ISC",
     "repository": {
         "type": "git",
         "url": "git+https://github.com/eirikt/default-webapp-elm-now.git"
+    },
+    "scripts": {
+        "build": "webpack"
+    },
+    "devDependencies": {
+        "file-loader": "^2.0.0",
+        "ignore-emit-webpack-plugin": "^1.0.2",
+        "webpack": "^4.19.0",
+        "webpack-cli": "^3.1.0"
     }
 }
