--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "default-webapp-elm-now",
-    "version": "0.2.4",
+    "version": "0.3.0",
     "license": "ISC",
     "repository": {
         "type": "git",
@@ -8,7 +8,8 @@
     },
     "scripts": {
         "setup": "npm install",
-        "clean": "rimraf build",
+        "clean": "rimraf build & npm run clean:elm",
+        "clean:elm": "rimraf elm-stuff",
         "build": "webpack",
         "deploy": "npm run deploy:staging",
         "deploy:staging": "npm run setup & npm run clean & npm run build & now build --public",
@@ -16,8 +17,8 @@
         "deploy:production": "now alias"
     },
     "devDependencies": {
-        "file-loader": "^2.0.0",
-        "ignore-emit-webpack-plugin": "^1.0.2",
+        "elm-webpack-loader": "^5.0.0",
+        "html-webpack-plugin": "^3.2.0",
         "webpack": "^4.19.0",
         "webpack-cli": "^3.1.0"
     }
