--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "default-webapp-elm-now",
-    "version": "0.3.0",
+    "version": "0.3.1",
     "license": "ISC",
     "repository": {
         "type": "git",
@@ -19,6 +19,7 @@
     "devDependencies": {
         "elm-webpack-loader": "^5.0.0",
         "html-webpack-plugin": "^3.2.0",
+        "uglify": "^0.1.5",
         "webpack": "^4.19.0",
         "webpack-cli": "^3.1.0"
     }
