--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "default-webapp-elm-now",
-    "version": "0.3.2",
+    "version": "0.4.0",
     "license": "ISC",
     "repository": {
         "type": "git",
@@ -17,8 +17,12 @@
         "deploy:production": "now alias"
     },
     "devDependencies": {
+        "css-loader": "^1.0.0",
         "elm-webpack-loader": "^5.0.0",
         "html-webpack-plugin": "^3.2.0",
+        "node-sass": "^4.9.3",
+        "sass-loader": "^7.1.0",
+        "style-loader": "^0.23.0",
         "webpack": "^4.19.0",
         "webpack-cli": "^3.1.0"
     }
