--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "default-webapp-elm-now",
-    "version": "0.5.0",
+    "version": "0.5.1",
     "license": "ISC",
     "repository": {
         "type": "git",
@@ -11,6 +11,7 @@
         "clean": "rimraf build & npm run clean:elm",
         "clean:elm": "rimraf elm-stuff",
         "check:1": "npm audit",
+        "check:2": "npm-check",
         "build": "webpack",
         "deploy": "npm run deploy:staging",
         "deploy:staging": "npm run setup & npm run clean & npm run build & now build --public",
@@ -22,6 +23,7 @@
         "elm-webpack-loader": "^5.0.0",
         "html-webpack-plugin": "^3.2.0",
         "node-sass": "^4.9.3",
+        "npm-check": "^5.9.0",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.23.0",
         "webpack": "^4.19.0",
