--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "default-webapp-elm-now",
-    "version": "0.5.2",
+    "version": "0.5.3",
     "license": "ISC",
     "repository": {
         "type": "git",
@@ -12,6 +12,7 @@
         "clean:elm": "rimraf elm-stuff",
         "check:1": "npm audit",
         "check:2": "npm-check",
+        "check:3": "elm-analyse",
         "build": "webpack",
         "deploy": "npm run deploy:staging",
         "deploy:staging": "npm run setup & npm run clean & npm run build & now build --public",
@@ -20,6 +21,7 @@
     },
     "devDependencies": {
         "css-loader": "^1.0.0",
+        "elm-analyse": "^0.15.0",
         "elm-webpack-loader": "^5.0.0",
         "html-webpack-plugin": "^3.2.0",
         "node-sass": "^4.9.4",
