--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "default-webapp-elm-now",
-    "version": "0.5.4",
+    "version": "0.5.5",
     "license": "ISC",
     "repository": {
         "type": "git",
@@ -13,6 +13,7 @@
         "check:1": "npm audit",
         "check:2": "npm-check",
         "check:3": "npm run elm:analyse",
+        "check:4": "sass-lint '**/*.scss' --verbose --no-exit",
         "elm:clean": "rimraf elm-stuff",
         "elm:format": "elm-format src/elm/ --yes",
         "elm:analyse": "elm-analyse",
@@ -29,6 +30,7 @@
         "html-webpack-plugin": "^3.2.0",
         "node-sass": "^4.9.4",
         "npm-check": "^5.9.0",
+        "sass-lint": "^1.12.1",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.23.1",
         "webpack": "^4.20.2",
