--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "default-webapp-elm-now",
-    "version": "0.5.6",
+    "version": "0.6.0",
     "license": "ISC",
     "repository": {
         "type": "git",
@@ -17,6 +17,7 @@
         "elm:clean": "rimraf elm-stuff",
         "elm:format": "elm-format src/elm/ --yes",
         "elm:analyse": "elm-analyse",
+        "dev": "webpack-dev-server",
         "build": "webpack",
         "deploy": "npm run deploy:staging",
         "deploy:staging": "npm run setup & npm run clean & npm run build & now build --public",
@@ -34,6 +35,7 @@
         "sass-loader": "^7.1.0",
         "style-loader": "^0.23.1",
         "webpack": "^4.20.2",
-        "webpack-cli": "^3.1.2"
+        "webpack-cli": "^3.1.2",
+        "webpack-dev-server": "^3.1.9"
     }
 }
