--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "default-webapp-elm-now",
-    "version": "0.6.0",
+    "version": "0.6.1",
     "license": "ISC",
     "repository": {
         "type": "git",
@@ -17,7 +17,7 @@
         "elm:clean": "rimraf elm-stuff",
         "elm:format": "elm-format src/elm/ --yes",
         "elm:analyse": "elm-analyse",
-        "dev": "webpack-dev-server",
+        "dev": "webpack-dev-server --hot",
         "build": "webpack",
         "deploy": "npm run deploy:staging",
         "deploy:staging": "npm run setup & npm run clean & npm run build & now build --public",
@@ -27,6 +27,7 @@
     "devDependencies": {
         "css-loader": "^1.0.0",
         "elm-analyse": "^0.15.0",
+        "elm-hot-webpack-loader": "^1.0.2",
         "elm-webpack-loader": "^5.0.0",
         "html-webpack-plugin": "^3.2.0",
         "node-sass": "^4.9.4",
