--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "default-webapp-elm-now",
-    "version": "0.7.10",
+    "version": "0.7.11",
     "license": "ISC",
     "repository": {
         "type": "git",
@@ -15,15 +15,16 @@
         "check:3": "npm run elm:analyse",
         "check:4": "sass-lint '**/*.scss' --verbose --no-exit",
         "elm:clean": "rimraf elm-stuff",
-        "elm:format": "elm-format src/elm/ --yes",
+        "elm:format": "elm-format src/elm/ --yes & elm-format tests/ --yes",
         "elm:analyse": "elm-analyse",
+        "elm:test": "elm-test",
         "dev": "npm run setup & webpack-dev-server --mode=development --hot",
         "build": "npm run build:production",
         "build:quick": "webpack --mode=development",
         "build:dev": "npm run build:development",
         "build:development": "npm run setup & npm run build:quick",
         "build:prod": "npm run build:production",
-        "build:production": "npm run setup & webpack --mode=production",
+        "build:production": "npm run setup & webpack --mode=production & npm run elm:format & npm run elm:test",
         "deploy": "npm run deploy:staging",
         "deploy:staging": "npm run clean & npm run build:production & now build",
         "deploy:prod": "npm run deploy:production",
@@ -34,6 +35,7 @@
         "css-loader": "^1.0.1",
         "elm-analyse": "^0.15.0",
         "elm-hot-webpack-loader": "^1.0.2",
+        "elm-test": "^0.19.0-rev3",
         "elm-webpack-loader": "^5.0.0",
         "html-webpack-plugin": "^3.2.0",
         "node-sass": "^4.10.0",
