Multiple commands in npm scripts
Platform-independent execution of multiple commands in npm scripts

--- a/package.json
+++ b/package.json
@@ -8,27 +8,35 @@
     },
     "scripts": {
         "setup": "npm install",
-        "clean": "rimraf build & npm run clean:elm",
+        "clean:build": "rimraf build",
         "clean:elm": "npm run elm:clean",
+        "clean": "npm-run-all --parallel clean:*",
         "check:1": "npm audit",
         "check:2": "npm-check",
         "check:3": "npm run elm:analyse",
         "check:4": "sass-lint '**/*.scss' --verbose --no-exit",
+        "check": "npm-run-all --serial check:*",
         "elm:clean": "rimraf elm-stuff",
-        "elm:format": "elm-format src/elm/ --yes & elm-format tests/ --yes",
-        "elm:analyse": "elm-analyse",
+        "elm:format-main": "elm-format src/elm/ --yes",
+        "elm:format-test": "elm-format tests/ --yes",
+        "elm:format": "npm-run-all --parallel elm:format-main elm:format-test",
         "elm:test": "elm-test",
-        "dev": "npm run setup & webpack-dev-server --mode=development --hot",
+        "elm:analyse": "elm-analyse",
+        "webpack:dev-server": "webpack-dev-server --mode=development --hot",
+        "webpack:development": "webpack --mode=development",
+        "webpack:production": "webpack --mode=production",
+        "dev": "npm-run-all --serial setup webpack:dev-server",
         "build": "npm run build:production",
-        "build:quick": "webpack --mode=development",
         "build:dev": "npm run build:development",
-        "build:development": "npm run setup & npm run build:quick",
+        "build:development": "npm-run-all --serial webpack:development elm:test",
         "build:prod": "npm run build:production",
-        "build:production": "npm run setup & webpack --mode=production & npm run elm:format & npm run elm:test",
+        "build:production": "npm-run-all --serial setup webpack:production elm:format elm:test",
+        "zeit:now": "now build",
+        "zeit:now-alias": "now alias",
         "deploy": "npm run deploy:staging",
-        "deploy:staging": "npm run clean & npm run build:production & now build",
+        "deploy:staging": "npm-run-all --serial clean build:production zeit:now",
         "deploy:prod": "npm run deploy:production",
-        "deploy:production": "now alias"
+        "deploy:production": "npm run zeit:now-alias"
     },
     "devDependencies": {
         "copy-webpack-plugin": "^4.6.0",
@@ -40,6 +48,7 @@
         "html-webpack-plugin": "^3.2.0",
         "node-sass": "^4.10.0",
         "npm-check": "^5.9.0",
+        "npm-run-all": "^4.1.5",
         "sass-lint": "^1.12.1",
         "sass-loader": "^7.1.0",
         "style-loader": "^0.23.1",
