Elm Analyse now supports Elm v0.19
Dependency updates

--- a/package.json
+++ b/package.json
@@ -16,12 +16,16 @@
         "check:3": "npm run elm:analyse",
         "check:4": "sass-lint '**/*.scss' --verbose --no-exit",
         "check": "npm-run-all --serial check:*",
+        "sleep": "sleepms 1000",
         "elm:clean": "rimraf elm-stuff",
         "elm:format-main": "elm-format src/elm/ --yes",
         "elm:format-test": "elm-format tests/ --yes",
         "elm:format": "npm-run-all --parallel elm:format-main elm:format-test",
         "elm:test": "elm-test",
         "elm:analyse": "elm-analyse",
+        "elm:analyse-server": "elm-analyse -s",
+        "elm:analyse-gui-open": "opn http://localhost:3000",
+        "elm:analyse-gui": "npm-run-all --serial elm:analyse-server elm:analyse-gui-open",
         "webpack:dev-server": "webpack-dev-server --mode=development --hot",
         "webpack:development": "webpack --mode=development",
         "webpack:production": "webpack --mode=production",
@@ -40,20 +44,22 @@
     },
     "devDependencies": {
         "copy-webpack-plugin": "^4.6.0",
-        "css-loader": "^1.0.1",
-        "elm-analyse": "^0.15.0",
+        "css-loader": "^2.1.0",
+        "elm-analyse": "^0.16.0",
         "elm-hot-webpack-loader": "^1.0.2",
-        "elm-test": "^0.19.0-rev3",
+        "elm-test": "^0.19.0",
         "elm-webpack-loader": "^5.0.0",
         "html-webpack-plugin": "^3.2.0",
-        "node-sass": "^4.10.0",
+        "node-sass": "^4.11.0",
         "npm-check": "^5.9.0",
         "npm-run-all": "^4.1.5",
+        "opn-cli": "^4.0.0",
         "sass-lint": "^1.12.1",
         "sass-loader": "^7.1.0",
+        "sleep-ms": "^2.0.1",
         "style-loader": "^0.23.1",
-        "webpack": "^4.25.1",
+        "webpack": "^4.28.3",
         "webpack-cli": "^3.1.2",
-        "webpack-dev-server": "^3.1.10"
+        "webpack-dev-server": "^3.1.14"
     }
 }
